Fix ToC alignment - ensure all elements are left-aligned

--- a/asciidoc-style.css
+++ b/asciidoc-style.css
@@ -73,6 +73,7 @@ body {
   border-radius: 10px;
   padding: 25px;
   margin: 30px 0;
+  text-align: left;
 }
 
 #toctitle {
@@ -87,11 +88,13 @@ body {
 #toc ul {
   list-style: none;
   padding-left: 0;
+  text-align: left;
 }
 
 #toc li {
   margin: 8px 0;
   color: var(--text-color);
+  text-align: left;
 }
 
 #toc a {
